--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,16 @@ org.gradle.daemon=false
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
 	minecraft_version=b1.7.3
-	yarn_mappings=b1.7.3+cbcfb39
+	yarn_mappings=b1.7.3+0ec7dcc
 	loader_version=0.14.24-babric.1
 
 # Mod Properties
 	mod_version=1.0.0
-	maven_group=com.example
-	archives_base_name=fabric-example-mod
+	maven_group=jadestrouble.netherexpansion
+	archives_base_name=b1.7.3-NetherExpansion
+
+# Mod Compat
+	bhcreative_version=0.4.5
 
 # Dependencies
 	stapi_version=2.0-alpha.1.1
